<resources>
    <string name="app_name" translatable="false">QuotationShake</string>
    <string name="new_quotation">Quotations</string>
    <string name="favourites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="aboutMe"> QuotationShake by Josep \n\n jmartor@inf.upv.es \n\n Developed for DADM 2023 </string>
    <string name="logo_description">QuotationShake\'s logo</string>

    <string name="welcomeMessage">Hello %1s!, \n\nRefresh to get a new quotation\n\n(swipe down or options menu)</string>
    <string name="refresh">Refresh</string>
    <string name="eliminar_todos">Delete all</string>
    <string name="quotationError">Error creating quotation</string>
    <string name="internetException">There is no internet connection available</string>
    <string name="username_preference">Username</string>
    <string name="lang_preference">Language</string>
    <string name="hintUsername">Enter an username</string>
    <string name="hintLanguage">Select your preferred language</string>

    <string name="en" translatable="false">en</string>
    <string name="ru" translatable="false">ru</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
</resources>