<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/newQuotationFragment">
    <fragment
        android:id="@+id/newQuotationFragment"
        android:name="dadm.jmartor.QuotationShake.ui.newquotation.NewQuotationFragment"
        android:label="@string/new_quotation"
        tools:layout="@layout/fragment_new_quotation"
        />
    <fragment
        android:id="@+id/newFavouritesFragment"
        android:name="dadm.jmartor.QuotationShake.ui.favourites.NewFavouritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites"
        >
        <action
            android:id="@+id/action_newFavouritesFragment_to_deleteAllDialogFragment"
            app:destination="@id/deleteAllDialogFragment" />
    </fragment>
    <fragment
        android:id="@+id/newSettingsFragment"
        android:name="dadm.jmartor.QuotationShake.ui.settings.NewSettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"
        />
    <dialog
        android:id="@+id/aboutDialogFragment"
        android:name="dadm.jmartor.QuotationShake.ui.about.AboutDialogFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"
        />
    <dialog
        android:id="@+id/deleteAllDialogFragment"
        android:name="dadm.jmartor.QuotationShake.ui.favourites.DeleteAllDialogFragment"
        android:label="@string/eliminar_todos"
        />
</navigation>